--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h1>Nuestro Contacto</h1>
                     <ul>
                         <li>Numero: 1140353524</li>
-                        <li>Mail: benja27.miguens@gmail.com</li>
+                        <li>Mail: benjamin.miguens@davinci.edu.ar</li>
                         <li>Instagram: epiviosi_store</li>
                     </ul>
                 
