--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <div class="logo">
                 <img src="img/GAsset 12.png" alt="">
             </div>
-            <a href="#" class="b1">Home</a>
-            <a href="prod.html" class="b2">Merch</a>
-            <a href="#Contact" class="b3">Contacto</a>
+            <div>
+                <a href="#" class="b1">Home</a>
+                <a href="prod.html" class="b2">Merch</a>
+                <a href="#Contact" class="b3">Contacto</a>
+            </div>
         </div>
         </header>
         
@@ -60,7 +62,7 @@
                     <h1>Nuestro Contacto</h1>
                     <ul>
                         <li>Numero: 1140353524</li>
-                        <li>Mail: benjamin.miguens@davinci.edu.ar</li>
+                        <li>Mail:<a href="mailto:benjamin.miguens@davinci.edu.ar">benjamin.miguens@davinci.edu.ar</a></li>
                         <li>Instagram: epiviosi_store</li>
                     </ul>
                 
