--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         Nuestro proyecto se basa en la creación de un pedal de origen nacional que brinde la resitencia de un pedal de montaña con un agarre similar pero no igual al de los de clip, esto se logra a traves de imanes en vez de el sistema de agarre de los pedales de clip. Tenemos muy en cuenta que estos pedales necesitaran tambien una suela especial con la posibilidad de unir una pieza de metal necesaria para el magnetismo, pero nuestro producto está dirigido a ciclistas experimentados que cuenten con equipo especial para este deporte tan arriesgado, este equipo incluye zapatillas reforzadas con una suela especial para un mejor agarre a los pedales y la posibidad de atornillar dicha pieza. Aunque siempre existe la posibidad de usarlos sin el agarre ya que nuestros pedales cuentan con una amplia superficie de apollo. 
                     </p>
                 </div>
+                <div class="imgs">
+                    <img class="ImgSec" src="img/616vdjU9EuL._AC_UF1000,1000_QL80_.jpg" alt="" >
+                </div>
                
                 
             <section class="form">
